# Motor-Controller-CAN

./: README.md  can_test.py  motorControl.py  prac.py
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/can_test/lib/can_test/: can_interface  can_monitor  cmd_publisher  gui_interface
ros2_ws/install/can_test/share/can_test/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/custom_msgs/share/custom_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ros2_ws/install/custom_msgs/share/custom_msgs/action/: MapsDistance.action  MapsDistance.idl
ros2_ws/install/custom_msgs/share/custom_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  custom_msgsConfig-version.cmake  custom_msgsConfig.cmake  custom_msgs__rosidl_typesupport_introspection_cExport.cmake  custom_msgs__rosidl_typesupport_introspection_cppExport.cmake  export_custom_msgs__rosidl_generator_pyExport.cmake  export_custom_msgs__rosidl_typesupport_fastrtps_cppExport.cmake  (+3 more)
ros2_ws/log/: latest_build
ros2_ws/src/can_test/: package.xml  setup.py
ros2_ws/src/can_test/can_test/: can_interface (copy).py  can_interface.py  cmd_publisher.py  gui_interface.py
ros2_ws/src/can_test/scripts/: list_canlib_channels.py  rx_kvaser.py  tx_kavser.py
ros2_ws/src/custom_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/custom_msgs/msg/: UTMPoint.msg  WheelRPM.msg
(+109 files in other folders)
